Fix width issue on small screens

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -202,6 +202,9 @@ header .h1 {
 }
 
 @media (max-width: 800px) {
+  .col-6 {
+    width: inherit;
+  }
   section .row {
     display: block;
   }
